# general-survey

./: README.md  license.txt  pyproject.toml
general_survey/: hooks.py  modules.txt
general_survey/general_survey/doctype/family/: family.js  family.json  family.py  test_family.py
general_survey/general_survey/doctype/family/templates/: family.html  family_row.html
general_survey/general_survey/doctype/familymember/: familymember.js  familymember.json  familymember.py  test_familymember.py
general_survey/general_survey/doctype/familymember/templates/: familymember.html  familymember_row.html
general_survey/general_survey/web_form/family_info_form/: family_info_form.json
general_survey/general_survey/web_form/member_info_form/: member_info_form.json
